[gd_scene load_steps=8 format=2]

[ext_resource path="res://Unit/Unit.gd" type="Script" id=1]
[ext_resource path="res://Tiles/nav_test.png" type="Texture" id=2]
[ext_resource path="res://General/2DShaker.gd" type="Script" id=3]
[ext_resource path="res://Fonts/details_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Unit/DamageNumber.gd" type="Script" id=5]
[ext_resource path="res://Unit/TileHighlight.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_blend = true
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[node name="Unit" type="Sprite"]
position = Vector2( 72, 104 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 16, 16, 16, 16 )
script = ExtResource( 1 )

[node name="HealthUI" type="Control" parent="."]
visible = false
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="HealthUI"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.164706, 0.164706, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FG" type="ColorRect" parent="HealthUI"]
anchor_left = 0.062
anchor_top = 0.25
anchor_right = 0.937
anchor_bottom = 0.75
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selecter" type="Control" parent="."]
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileHighlight" type="PanelContainer" parent="."]
visible = false
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DmgUI" type="Label" parent="."]
visible = false
margin_left = -8.0
margin_top = -24.0
margin_right = 8.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 4
text = "00"
align = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2DShaker" type="Node2D" parent="."]
script = ExtResource( 3 )

[connection signal="mouse_entered" from="Selecter" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Selecter" to="." method="_on_mouse_exited"]
